2015-04-03 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCerr.c:
	* src/SDCCerr.h:
	* src/SDCCast.c:
	  Add a warning for inline __naked functions.

2015-04-02 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCutils.h:
	* src/SDCCutils.c:
	* src/SDCCmain.c:
	  Support --program-prefix and --program-suffix while calling assembler and linker.
	* src/z80/gen.c:
	* src/z80/mapping.i:
	* src/SDCCasm.c:
	  Add new "globalfunctionlabel".
	* sdas/linksrc/Makefile.in:
	  Fix a spot in 'make install'.

2015-04-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCnaddr.hpp,
	  src/SDCCnaddr.cc:
	  Dump tree decomposition used for address space switching on --dump-graphs.

2015-04-01 Ben Shi <powerstudio1st AT 163 DOT com>
	* sdas/as6808/Makefile.in:
	* sdas/as8051/Makefile.in:
	* sdas/as8xcxxx/Makefile.in:
	* sdas/asgb/Makefile.in:
	* sdas/asrab/Makefile.in:
	* sdas/asstm8/Makefile.in:
	* sdas/astlcs90/Makefile.in:
	* sdas/asz80/Makefile.in:
	* sdas/linksrc/Makefile.in:
	* src/Makefile.in:
	* support/cpp/Makefile.in:
	* support/librarian/Makefile.in:
	* support/makebin/Makefile.in:
	* support/packihx/Makefile.in:
	  Fix a bug of --program-suffix on Win32 / Win64.

2015-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2368.c:
	  Fixed bug #2368.

2015-03-27 Ben Shi <powerstudio1st AT 163 DOT com>
	* sdas/as6808/Makefile.in:
	* sdas/as8051/Makefile.in:
	* sdas/as8xcxxx/Makefile.in:
	* sdas/asgb/Makefile.in:
	* sdas/asrab/Makefile.in:
	* sdas/asstm8/Makefile.in:
	* sdas/astlcs90/Makefile.in:
	* sdas/asz80/Makefile.in:
	* sdas/linksrc/Makefile.in:
	* src/Makefile.in:
	* support/cpp/Makefile.in:
	* support/librarian/Makefile.in:
	* support/makebin/Makefile.in:
	* support/packihx/Makefile.in:
	* support/scripts/Makefile.in:
	  Support --program-prefix and --program-suffix.

2015-03-26 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/sdbinutils/libiberty/Makefile.in:
	  Disable make install.